crates/tapir-script/compiler/src/snapshot_tests/grammar/errors/mulitple_errors.tapir
var x = 3894723984729;
var y = 234872392818319287;

x = 3 * ;
y = %% 2;